<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">bhccountdown</string>
    <string name="action_settings">Settings</string>
    <string name="Time">00:00:00</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Reset">Reset</string>
<string name="Set">Set time</string>
</resources>
